Added changes to revision

--- a/docs/write_up/Nature_SciReports/Rev/JSDM.bib
+++ b/docs/write_up/Nature_SciReports/Rev/JSDM.bib
@@ -735,7 +735,7 @@ title = {{Using spatio-temporal models of population growth and movement to moni
 volume = {54},
 year = {2017}
 }
-@article{Beare2010,
+@techreport{Beare2010,
 abstract = {This project has attempted to evaluate the effectiveness of the fisheries management measure known as the {\^{a}}{\oe}Plaice Box{\^{a}} (PB) for the conservation of plaice and other species of marine organisms in the southDeastern North Sea. The study provides an inventory of existing information and collects new material on the effects of the PB on the conservation of plaice and the impact of the PB on various components of the commercial fishing fleets. Based on an analysis of key processes that affect the impact of the PB, modifications will be explored to improve the positive effect on the conservation of plaice and other species of marine organisms, including catches and byD catches of other marketable fish. An economic assessment of the consequences of those modifications, in terms of their costDeffectiveness, and implications for profitability of the activity is presented. Finally, the data requirements for future evaluations of the effects of the PB on conservation is discussed. During the project we (IMARES) have had good cooperation with our partners. All datasets promised by the three countries involved (Denmark, Germany and TheNetherlands) have been compiled and aggregated over identical metiers. We have identified key scientific hypotheses to test and decided on some plausible future management changes to investigate. Stakeholder interest in the project has been high and they made extremely useful contributions to the workshop held in October. The results of the study are summarized below after which we discuss how well we have addressed the specific terms of reference for the evaluation. 1. With support of the flatfish fisheries, the Plaice box (PB) was established as a technical fisheries management measure to protect undersized plaice from discarding, closing the PB for trawl fisheries with vessels {\textgreater}221kW, with the expectation that yield and spawning stock biomass would increase. 2. The PB regulation affected fisheries differentially. The fleets {\textgreater}221kW lost fishing grounds, while the exemption fleets benefited from a reduction in competition with larger vessels. 3. Contrary to expectations, plaice stock biomass in the North Sea decreased from landings of 169 818t in 1989 to only 48 875t in 2008 undermining the credibility of closed areas as a fisheries management tool. 4. Flatfish fishers (see Appendix to Chapter 2) have argued that the PB caused the decrease in yield and stock size since the area deteriorated as a food source due to the decrease in bottom trawling and have asked for a reDopening of the box. 5. Conservationist have argued that the PB positively contributed to conservation objectives because of the reduction in bottom trawling. 6. The main question is whether the decrease in the plaice stock is due to the establishment of the PB or due to a change in the environment unrelated to the establishment of the PB (ocean climate, eutrophication, others) 7. Beam trawl fishing effort (kW hours at sea) in the plaice box area has decreased stepwise since the establishment of the box in 1989 and the full closure since 1994 to ca 35 {\%} and ca 10{\%}, respectively of the estimated preDclosure level (see Grift et al., 2004). According to Dutch logbook data total (both engine size categories combined) fishing effort by beam trawlers targeting finfish inside the PB fell from 38.8 million kWhrs in 1990 to 5.3 million kWhrs in 2008 a reduction of 86{\%}. Total (Denmark, Germany and The Netherlands) beam trawl effort by the exemption fleet of {\textless}=221kW fishing for shrimp increased from 68 million kWhrs in 1995 to 177 million kWhrs in 1995. Effort by the exemption fleet targeting plaice and sole, however, fell during the same period (1995 {\^{a}}“ 2008) from 32 million kWhrs in 1995 to 2.9 million kWhrs in 2008 (see Chapter 4, Fig. 4.1.5a). The proportion of landings of plaice and sole in the PB relative to the North Sea has decreased. Fishing effort by Danish gill netters (both {\textless}=221kW and {\textgreater} 221kW) increased between 1987, peaked in the mid 1990s and fell subsequently. Inside the PB effort by the {\textless}=221kW category was 3.6million kWhrs in 1987, 25million kWhrs in 1994, falling to 4.7 million kWhrs in 2008. 8. The PB, nevertheless, remains an important fishing area for the fleet of smaller vessel (kW{\textless}=221 kW, see table). Especially beam trawlers fishing for shrimps (BEAM.16D31) and the mixed flatfish fisheries (BEAM.{\textgreater}100) are most active and are earning more than 70{\%} inside the PB (see Table 1.1). 9. Fishing effort of shrimpers is concentrated within the 12 nm zone. Only 14{\%}, 4{\%}, and 2{\%} for The Netherlands, Germany and Denmark (mean of 2005 to 2008), respectively, of monetary yield from shrimpers was earned outside the 12 nm zone but within the PB area. Fishing effort by the shrimpers has been fairly stable since 2000, when effort data became mandatory for all countries. The influence of the PB regulation is restricted to the area outside the 12nm zone. 10. Plaice discarding mainly occurs in the fishery for brown shrimps (beam trawl 16D32 mm), sole (beam trawl 80mm) and the 80 mm otter trawl fishery. The shrimp fishery discard mainly 0Dgroup, while the other fleets discard plaice of 1Dyear and older. 11. In the period 2001D2008, discard fishing mortality is estimated at F=0.05 for 0Dgroup, F=0.16 for 1D group and F=0.55 for 2Dgroup. 12. The level of protection offered by the PB has been far lower than was originally expected in 1989. This is due to the lower growth rate of plaice and the shift of undersized plaice to deeper waters outside the PB. Nevertheless, the proportion of undersized plaice relative to the marketable sized plaice is still higher in the PB than outside. The discard rate in the PB will be higher than outside. 13. Growth rate of plaice decreases with population density. This densityDdependent feedDback, however, does not compensate for the increase in density due to a reduced discard mortality. The net result is, however, positive. 14. The change in distribution of undersized plaice in the 1990s is more likely due to a behavioural response to higher temperatures in combination with a decrease in macrobenthos, and less likely due to a decrease in food within the PB due to the decrease in bottom trawling. 15. Given 13 and 14, the reduced effect of the PB is more likely due to changes in the environment and less likely due to the establishment of the PB, although it cannot be ruled out that the change in trawling in the PB has affected the food for plaice. 16. The design of the PB makes it impossible to assess its effectiveness, in particular because of the lack of reference areas. If the politicians decide on modifications to the PB they should select a design, including reference areas, that would help any future scientific evaluations. 17. Given the original objective of the plaice box to reduce discarding of undersized plaice, reDopening of the plaice box is expected to lead to a small ({\textless}5{\%}) increase in plaice discard numbers and decrease in yield and spawning stock biomass ({\textless}5{\%}). Extending the PB to encompass one extra line of rectangles along the continental coast of the Netherlands would encompass 93{\%}, 70{\%} and 54{\%} of age 0, 1, and 2 plaice respectively and will likely result in a moderate reduction in plaice discards ({\textless}10{\%}) and moderate increase yield per recruit and spawning stock biomass (about 10{\%}). Nevertheless any effects will be impossible to detect because of the variability in natural recruitment which we cannot measure accurately. 18. Any change in management will impact the fleets differentially. Extending the PB will benefit the exemption fleets, while reDopening of the PB will benefit the fleet of large vessels and harm the exemption fleets. The shrimp fleet will be marginally affected by a change in the PB since they operate mainly within the 12 nm zone. 19. Real time closure is expected to contribute to a reduction in plaice discarding. The effect can not be evaluated because of a lack of detailed data on the frequency, duration and spatial scale at which local concentrations occur},
 author = {Beare, D J and Rijndsorp, A D and {Van Kooten}, T and Fock, H and Schroeder, A and Kloppman, M and Witbaard, R and Meesters, E and Schulze, T and Blaesbjerg, M and Damm, U and Quirijns, F},
 file = {:home/paul/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Beare et al. - 2010 - Study for the Revision of the plaice box {\^{a}} Final Report.pdf:pdf},
