Small typo correction

--- a/docs/write_up/Nature_SciReports/Rev/SpatialMixedFishery.tex
+++ b/docs/write_up/Nature_SciReports/Rev/SpatialMixedFishery.tex
@@ -191,7 +191,8 @@ species as a function of latent variables\cite{Thorson2015} representing
 spatial variation (9 factors; \deleted[id = CM]{which we call}\added[id = CM]{termed} ``average'' spatial variation) and
 spatiotemporal variation (9 factors) for encounter probability and positive
 catch rates (\deleted[id = CM]{which we call}\added[id = CM]{termed} ``positive density'') separately\cite{Thorson2015a}.
-\deleted[id = CM]{We use the r}\added[id = CM]{R}esultant factor analysis \added[id = CM]{are used} to identify community dynamics and drivers
+\deleted[id = CM]{We use the r}\added[id = CM]{R}esultant factor
+analys\replaced[id=PD]{e}{i}s \added[id = CM]{are used} to identify community dynamics and drivers
 common among 9 species, each analysed separately for juveniles and adult
 stages.  We refer to each combination of species and size class as a ``species\deleted[id=PD]{ group}", and present results through transformation of
 the loading matrices using PCA rotation. \added[id=JT]{We use this PCA rotation
